tests/ui/fail/message-reference/message-reference.rs
use l10n::message;

l10n::init!();

fn main() {
    let _ = message!("resource", "baz");
}
